feat: add endpoints to batch create/delete documents (#3658)
