# packages/fai-sdk/src/api/types/CreateDocumentRequest.ts
@@ -2,12 +2,6 @@
  * This file was auto-generated by Fern from our API Definition.
  */
 
-/**
- * @example
- *     {
- *         document: "document"
- *     }
- */
 export interface CreateDocumentRequest {
     /** The content of the document that will be returned to Ask Fern during document retrieval. */
     document: string;
