# packages/fai-sdk/src/api/types/index.ts
@@ -3,10 +3,12 @@ export * from "./CodeIndexStatusResponse.js";
 export * from "./Conversation.js";
 export * from "./ConversationTurn.js";
 export * from "./ConversationTurnFeedback.js";
+export * from "./CreateDocumentRequest.js";
 export * from "./CreateDocumentResponse.js";
 export * from "./CreateFeedbackResponse.js";
 export * from "./CreateGuidanceResponse.js";
 export * from "./CreateQueryResponse.js";
+export * from "./DeleteDocumentRequest.js";
 export * from "./DeleteDocumentResponse.js";
 export * from "./DeleteGuidanceResponse.js";
 export * from "./Document.js";
